@@ -327,6 +327,9 @@ OCaml 4.12.0
   (David Allsopp, review by Nicolás Ojeda Bär, Sébastien Hinderer and
    Xavier Leroy)
 
+- #10070: Fix Float.Array.blit when source and destination arrays coincide.
+  (Nicolás Ojeda Bär, review by Alain Frisch and Xavier Leroy)
+
 ### Other libraries:
 
 - #8796: On Windows, make Unix.utimes use FILE_FLAG_BACKUP_SEMANTICS flag
